dev.ulearn.me -> ulearn.me

--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -82,7 +82,7 @@
 							<label for="isWebhookEnabled">
 								Загружать новые версии автоматически
 								<div class="form-text text-muted">
-									<small>Включите webhook в настройках репозитория, укажите url https://dev.ulearn.me/CoursesWebhook, сontent type json и secret @Model.GitSecret</small>
+									<small>Включите webhook в настройках репозитория, укажите url https://ulearn.me/CoursesWebhook, сontent type json и secret @Model.GitSecret</small>
 								</div>
 							</label>
 						</div>
