--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -14,6 +14,13 @@
   max-width: @maxContentWidth;
 }
 
+.errors {
+  background-color: @negativeColor;
+  padding: 20px;
+  color: #fff;
+  margin: 20px 200px;
+}
+
 .pageWrapper {
   position: relative;
 
