--- a/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
@@ -107,6 +107,7 @@
 
 @helper RoleButton(SingleCourseRolesModel courseRoles, string role, string cssClass)
 {
+	var isTempLabel = courseRoles.IsTempCourse ? "( временный)" : "";
 	var buttonClass = "btn-" + cssClass;
 	<button type="button"
 			class="btn btn-sm btn-default @( courseRoles.HasAccess ? buttonClass : "")"
@@ -115,7 +116,7 @@
 			data-toggle-userName="@courseRoles.UserName"
 			data-toggle-role="@courseRoles.Role.GetDisplayName()"
 			data-toggle-isRole="@true"
-			data-toggle-courseTitle="@courseRoles.CourseTitle"
+			data-toggle-courseTitle="@courseRoles.CourseTitle@isTempLabel"
 			onclick="openPopup(this, ToggleButtonClass)">
 		@role
 
@@ -139,15 +140,16 @@
 		<ul class="dropdown-menu" data-css-class="li-@cssClass">
 			@foreach (var course in coursesRoles.CourseRoles)
 			{
+				var isTempLabel = course.IsTempCourse ? "( временный)" : "";
 				<li class="@( course.HasAccess ? liClass : "")"
 					data-toggle-url="@course.ToggleUrl"
 					data-toggle-userName="@course.UserName"
 					data-toggle-role="@course.Role"
 					data-toggle-isRole="@true"
-					data-toggle-courseTitle="@course.CourseTitle"
+					data-toggle-courseTitle="@course.CourseTitle@isTempLabel."
 					onclick="openPopup(this, ToggleDropDownClass)">
 
-					<a>@course.CourseTitle</a>
+					<a>@course.CourseTitle@isTempLabel</a>
 				</li>
 			}
 		</ul>
@@ -170,17 +172,18 @@
 				foreach (var courseAccessType in user.CourseAccesses[courseId].Keys)
 				{
 					var courseAccess = user.CourseAccesses[courseId][courseAccessType];
+					var isTempLabel = courseAccess.IsTempCourse ? "( временный)" : "";
 					<li class="@( courseAccess.HasAccess ? "li-info" : "")"
 						data-toggle-url="@courseAccess.ToggleUrl"
 						data-toggle-userName="@courseAccess.UserName"
 						data-toggle-role="@courseAccess.AccessType.GetDisplayName()"
 						data-toggle-isRole="@false"
-						data-toggle-courseTitle="@courseAccess.CourseTitle"
+						data-toggle-courseTitle="@courseAccess.CourseTitle@isTempLabel"
 						data-css-class="li-info"
 						data-has-access="@( courseAccess.HasAccess ? "true" : "false")"
 
 						onclick="openPopup(this, ToggleButtonClass)">
-						<a>@courseAccessType.GetDisplayName()</a>
+						<a>@courseAccessType.GetDisplayName()@isTempLabel</a>
 					</li>
 				}
 			}
