--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1384,6 +1384,11 @@ body.lti-component {
 	margin-top: 30px;
 	font-size: 14px;
 	line-height: 1.42;
+	margin-bottom: 40px;
+}
+
+.legacy-page .exercise:last-child {
+	margin-bottom: 0;
 }
 
 .legacy-page .exercise__submission {
