Copied table styles from ulearn.css to text block styles

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Text/Text.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Text/Text.less
@@ -76,6 +76,19 @@
   margin: 0.5em 0;
 }
 
+.text table {
+  width: auto;
+  border: 1px solid #ddd;
+}
+
+.text table > thead > tr > th,
+.text table > tbody > tr > td {
+  padding: 8px;
+  line-height: 1.42857143;
+  vertical-align: top;
+  border: 1px solid #ddd;
+}
+
 @media (min-width: @minTabletWidth) {
   .text {
     font-size: 16px;
