--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -35,7 +35,7 @@
 @accentColor: #F69C00;
 @lightYellow: #FFF0BC;
 @orange: #D97E00;
-@lightOrange:#f0d196;
+@lightOrange: #f0d196;
 @successColor: #228007;
 @progressBarGreen: #3F9726;
 @green: #5cb85c;
@@ -44,6 +44,7 @@
 @blue: #0087d5;
 @lightBlue: #4C8DD9;
 @blueSmoke: #1D85D0;
+@powerBlue: #0b04ff;
 @progressBarBlue: @blueSmoke;
 @lightViolet: #C8C7FE;
 @linkColor: #3072C4;
