Changed background color in legacy revealed to light yellow

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -180,7 +180,7 @@
 }
 
 .legacy-page .revealed {
-	background-color: #e7f1ff;
+	background-color: #FFF0BC;
 	color: #000 !important;
 	padding: 16px 24px;
 	border-radius: 24px;
