--- a/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
@@ -107,7 +107,7 @@
 
 @helper RoleButton(SingleCourseRolesModel courseRoles, string role, string cssClass)
 {
-	var isTempLabel = courseRoles.IsTempCourse ? "( временный)" : "";
+	var isTempLabel = courseRoles.IsTempCourse ? "Временный - " : "";
 	var buttonClass = "btn-" + cssClass;
 	<button type="button"
 			class="btn btn-sm btn-default @( courseRoles.HasAccess ? buttonClass : "")"
@@ -140,7 +140,7 @@
 		<ul class="dropdown-menu" data-css-class="li-@cssClass">
 			@foreach (var course in coursesRoles.CourseRoles)
 			{
-				var isTempLabel = course.IsTempCourse ? "( временный)" : "";
+				var isTempLabel = course.IsTempCourse ? "Временный - " : "";
 				<li class="@( course.HasAccess ? liClass : "")"
 					data-toggle-url="@course.ToggleUrl"
 					data-toggle-userName="@course.UserName"
@@ -172,7 +172,7 @@
 				foreach (var courseAccessType in user.CourseAccesses[courseId].Keys)
 				{
 					var courseAccess = user.CourseAccesses[courseId][courseAccessType];
-					var isTempLabel = courseAccess.IsTempCourse ? "( временный)" : "";
+					var isTempLabel = courseAccess.IsTempCourse ? "Временный - " : "";
 					<li class="@( courseAccess.HasAccess ? "li-info" : "")"
 						data-toggle-url="@courseAccess.ToggleUrl"
 						data-toggle-userName="@courseAccess.UserName"
@@ -183,7 +183,7 @@
 						data-has-access="@( courseAccess.HasAccess ? "true" : "false")"
 
 						onclick="openPopup(this, ToggleButtonClass)">
-						<a>@courseAccessType.GetDisplayName()@isTempLabel</a>
+						<a>@isTempLabel@courseAccessType.GetDisplayName()</a>
 					</li>
 				}
 			}
