--- a/src/Frontend/src/components/course/Course/Slide/Blocks/BlocksWrapper.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/BlocksWrapper.less
@@ -69,7 +69,11 @@
 .withPaddings {
   padding: 16px @phoneSlidePadding;
 
-  :not(:last-child)&.withoutBottomPaddigns{
+  :not(:first-child) &.withoutTopPaddings {
+    padding-top: 0;
+  }
+
+  :not(:last-child) &.withoutBottomPaddigns {
     padding-bottom: 0;
   }
 }
@@ -83,7 +87,11 @@
   .withPaddings {
     padding: @phoneSlidePadding;
 
-    :not(:last-child)&.withoutBottomPaddigns{
+    :not(:first-child) &.withoutTopPaddings {
+      padding-top: 0;
+    }
+
+    :not(:last-child) &.withoutBottomPaddigns {
       padding-bottom: 0;
     }
   }
@@ -126,7 +134,11 @@
       padding-bottom: @laptopSlidePadding;
     }
 
-    :not(:last-child)&.withoutBottomPaddigns{
+    :not(:first-child) &.withoutTopPaddings {
+      padding-top: 0;
+    }
+
+    :not(:last-child) &.withoutBottomPaddigns {
       padding-bottom: 0;
     }
   }
@@ -145,7 +157,11 @@
     padding-left: @desktopSlidePadding;
     padding-right: @desktopSlidePadding;
 
-    :not(:last-child)&.withoutBottomPaddigns{
+    :not(:first-child) &.withoutTopPaddings {
+      padding-top: 0;
+    }
+
+    :not(:last-child) &.withoutBottomPaddigns {
       padding-bottom: 0;
     }
   }
