Reworked img width calculating, removed showing fullscreen button if img is small

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
@@ -1,7 +1,8 @@
 @import "../../../../../../variables";
 
 .wrapper {
-  width: fit-content; // do not let image to be bigger then real size
+  max-width: 100%;
+  width: 100%; // do not let image to be bigger then slide size
   margin-bottom: 10px;
   border-radius: 8px;
 }
