Added gitEditLink in slide title

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -130,6 +130,10 @@
   color: @blue;
 }
 
+.gitEditLink {
+  margin-left: 10px;
+}
+
 @media (min-width: @minTabletWidth) {
   .rootWrapper {
     width: @tabletSlideWidth;
