Added max-width to quiz textarea

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1160,7 +1160,7 @@ body.lti-component {
 }
 
 .legacy-page .quiz.quiz-block-input .form-control {
-	max-width: none;
+	max-width: 100%;
 }
 
 /* Quiz Analytics */
