Added better handling on img load error in image gallery
Overrided cursor behaviour

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
@@ -7,6 +7,10 @@
   border-radius: 8px;
 }
 
+.img {
+  cursor: default; //overriding cursor behaviour inside of imageGallery module
+}
+
 .wrapper .imageWrapper {
   &.open {
     z-index: 9999; // do not let elements overlap image in fullscreen mode
