Copied styles ffor code/pre/blockquote from back to front
Changes font-size in blockquote to inherit

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Text/Text.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Text/Text.less
@@ -43,7 +43,7 @@
   max-width: 100%;
 }
 
-.text ol,.text ul {
+.text ol, .text ul {
   margin-bottom: 1em;
   padding: 0;
   list-style: none;
@@ -87,6 +87,58 @@
   line-height: 1.42857143;
   vertical-align: top;
   border: 1px solid #ddd;
+}
+
+.text code, kbd, pre, samp {
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.text pre {
+  display: block;
+
+  padding: 9.5px;
+  margin: 0 0 10px;
+
+  font-size: 14px;
+  line-height: 20px;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+
+  overflow: auto;
+}
+
+.text pre code {
+  padding: 0;
+  font-size: inherit;
+  color: inherit;
+  white-space: pre-wrap;
+  background-color: transparent;
+  border-radius: 0;
+}
+
+.text code {
+  padding: 2px 4px;
+  color: #c7254e;
+  background-color: #f9f2f4;
+  border-radius: 4px;
+}
+
+.text blockquote {
+  padding: 10px 20px;
+  margin: 0 0 20px;
+
+  font-size: inherit;
+
+  border-left: 5px solid #eee;
+}
+
+.text blockquote ol:last-child, blockquote p:last-child, blockquote ul:last-child {
+  margin-bottom: 0;
 }
 
 @media (min-width: @minTabletWidth) {
