Removed bottom margins in last p in footer

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -120,6 +120,10 @@
   font-size: 12px;
   line-height: 12px;
   color: @dimgray;
+
+  & :last-child {
+    margin-bottom: 0;
+  }
 }
 
 .footer :hover {
