Dark line under yt video bug fix

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
@@ -45,3 +45,9 @@ h3.annotationTitle {
     line-height: 20px;
   }
 }
+
+@media (min-width: @minDesktopWidth) {
+  .videoContainer {
+    padding-bottom: 607px; //changing from 607.5 to prevent showing dark line under video
+  }
+}
