Removed bottom padding in video annotation, if video is inside of hidden block

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
@@ -44,6 +44,10 @@ h3.annotationTitle {
     font-size: 18px;
     line-height: 20px;
   }
+
+  .frame {
+    border-radius: 1px; //fixing bug c
+  }
 }
 
 @media (min-width: @minDesktopWidth) {
