--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -57,7 +57,7 @@
 	var firstHiddenBlock = true;
 	if (shouldSpoilerBlocksBeforeExercise)
 	{
-		<button id="exerciseTaskSpoilerButton" class="btn btn-light" type="button" data-toggle="collapse" data-target="#exerciseTaskSpoiler" aria-expanded="false" aria-controls="exerciseTaskSpoiler">
+		<button id="exerciseTaskSpoilerButton" class="btn" type="button" data-toggle="collapse" data-target="#exerciseTaskSpoiler" aria-expanded="false" aria-controls="exerciseTaskSpoiler">
 			Показать формулировку
 		</button>
 		<div id="exerciseTaskSpoiler" class="collapse">
