Removed undreling video annotations if its not on hover

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
@@ -20,6 +20,13 @@
 }
 
 h3.annotationTitle {
+  color: @linkColor;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
   &.closed {
     margin-top: 0;
     margin-bottom: 0;
