--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Text/Text.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Text/Text.less
@@ -21,6 +21,15 @@
   margin: 0 0 10px;
 }
 
+.text h1 {
+  margin-top: 16px;
+  margin-bottom: 16px;
+
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 26px;
+}
+
 .text h2 {
   margin-top: 16px;
   margin-bottom: 16px;
@@ -39,8 +48,18 @@
   line-height: 24px;
 }
 
+.text h4 {
+  margin-top: 16px;
+  margin-bottom: 8px;
+
+  font-weight: 500;
+}
+
 .text img {
   max-width: 100%;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 .text ol, .text ul {
@@ -53,6 +72,10 @@
   margin-bottom: 0.5em;
   position: relative;
   padding-left: 1.5em;
+
+  &:first-child {
+    margin-top: 8px;
+  }
 }
 
 .text ul li:before {
@@ -147,20 +170,39 @@
     line-height: 24px;
   }
 
+  .text img {
+    margin-bottom: 16px;
+    margin-top: 16px;
+  }
+
+  .text h1 {
+    margin-top: 32px;
+    margin-bottom: 24px;
+
+    font-size: 36px;
+    line-height: 44px;
+  }
+
   .text h2 {
     margin-top: 32px;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
 
-    font-weight: 600;
     font-size: 32px;
     line-height: 40px;
   }
 
   .text h3 {
-    margin-top: 24px;
+    margin-top: 32px;
     margin-bottom: 16px;
 
-    font-weight: 600;
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .text h4 {
+    margin-top: 24px;
+    margin-bottom: 8px;
+
     font-size: 20px;
     line-height: 28px;
   }
