Added handling not loaded img in fullscreen mode in image gallery

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
@@ -5,6 +5,11 @@
   width: 100%; // do not let image to be bigger then slide size
   margin-bottom: 10px;
   border-radius: 8px;
+  overflow: hidden;
+}
+
+.error {
+  border-radius: 0;
 }
 
 .img {
