Fixed incorrect behaviour in firefox

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
@@ -6,6 +6,11 @@
   margin-bottom: 10px;
   border-radius: 8px;
   overflow: hidden;
+
+  &.error {
+    width: fit-content;
+    height: fit-content;
+  }
 }
 
 .error {
