Fixed bug causing not resizing error img in fullscreen

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
@@ -27,6 +27,7 @@
     z-index: 9999; // do not let elements overlap image in fullscreen mode
 
     > :first-child {
+      max-width: 100vw;
       width: fit-content; // do not let image to be bigger then real size in fullscreen mode
       margin: auto;
     }
