--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -5,6 +5,10 @@
   min-height: calc(100vh - @headerHeight);
 }
 
+.withoutMinHeight {
+  min-height: 0;
+}
+
 .rootWrapper {
   width: 100%;
   min-height: calc(100vh - @headerHeight - @headerDividerHeight);
@@ -48,9 +52,9 @@
 .rootWrapper.withoutNavigation {
   position: relative;
 
-  min-height: 100vh;
   width: 100%;
   max-width: 100vw;
+  min-height: 0;
 
   padding: 0;
   margin: 0;
