--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Video/Video.less
@@ -11,6 +11,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 99.9%, 0% 99.9%);
   width: 100%;
   height: 100%;
 }
@@ -51,15 +52,5 @@ h3.annotationTitle {
   .annotationArrow {
     font-size: 18px;
     line-height: 20px;
-  }
-
-  .frame {
-    border-radius: 1px; //fixing bug c
-  }
-}
-
-@media (min-width: @minDesktopWidth) {
-  .videoContainer {
-    padding-bottom: 607px; //changing from 607.5 to prevent showing dark line under video
   }
 }
