--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1489,7 +1489,7 @@ body.lti-component {
 
 /*Styling tables in slides*/
 .legacy-page .slide table {
-	width: auto;
+	width: 100%;
 	border: 1px solid #ddd;
 }
 
