--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -38,6 +38,34 @@
   background-color: @white;
 }
 
+.forStudents {
+  :global { //we're hiding all hidden blocks and statistics in legacy page using styles
+    .student-submissions { //exercise solutions table
+      display: none;
+    }
+
+    .quiz__statistics { //quiz statistics
+      display: none ! important; //overriding bootstrap behaviour
+    }
+
+    .revealed { //hidden block
+      display: none;
+    }
+  }
+}
+
+.toggleContainer {
+  display: flex;
+  width: 100%;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  justify-content: flex-end;
+}
+
+.toggleText {
+  margin-right: 10px;
+}
+
 .navigationButtonsWrapper {
   margin-bottom: 15px;
   display: flex;
