Async TempCoursesRepo and fixes

--- a/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
@@ -149,7 +149,7 @@
 					data-toggle-courseTitle="@isTempLabel@course.CourseTitle."
 					onclick="openPopup(this, ToggleDropDownClass)">
 
-					<a>@course.CourseTitle@isTempLabel</a>
+					<a>@isTempLabel@course.CourseTitle</a>
 				</li>
 			}
 		</ul>
