--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -35,7 +35,7 @@
 				@{
 					var blockData = slide.Blocks.Select(
 						(b, i) => b is AbstractExerciseBlock
-							? new ExerciseBlockData(course.Id, (ExerciseSlide)slide) { RunSolutionUrl = "/" + slide.Index.ToString("000") + ".html?query=submit", DebugView = true, IsGuest = false }
+							? new ExerciseBlockData(course.Id, (ExerciseSlide)slide, false) { RunSolutionUrl = "/" + slide.Index.ToString("000") + ".html?query=submit", DebugView = true, IsGuest = false }
 							: b is AbstractQuestionBlock
 								? new QuizBlockData(new QuizModel
 								{
