AntiPlagiarism: other languages integration

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -1,6 +1,7 @@
 @* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using System.Linq
 @using Database.Models
+@using Ulearn.Common
 @using uLearn.Web.Clients
 @using uLearn.Web.Controllers
 @using uLearn.Web.Extensions
