--- a/src/uLearn.Web/Views/Sandbox/Index.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Database.Models
 @using uLearn.Web.Extensions
-@using Ulearn.Core
+@using Ulearn.Common
 @using Ulearn.Core.RunCheckerJobApi
 
 @model SubmissionsListModel
