ULEARN-494 added margin top to code mirror wrapper

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -300,6 +300,7 @@
 	border-radius: 8px;
 	height: auto;
 	margin-bottom: 1em;
+	margin-top: 1em;
 	line-height: 1.3em;
 	font-size: 14px;
 	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
