--- a/src/Frontend/src/components/course/Navigation/Unit/NavigationHeader/NavigationHeader.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NavigationHeader/NavigationHeader.less
@@ -1,6 +1,10 @@
 @import "../../../../../variables.less";
 
 .root {
+  position: sticky;
+  top: 0;
+  z-index: 3; // preventing nav links to overlap root
+  background-color: @white;
   padding: 12px 15px 15px 14px;
   border-bottom: 1px solid @borderColor;
 }
