ULEARN-482 added hack to prevent italic text overextend flashcard text container

--- a/src/Frontend/src/components/flashcards/Flashcards/OpenedFlashcard/openedFlashcard.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/OpenedFlashcard/openedFlashcard.less
@@ -92,6 +92,10 @@
   color: @additionalColor;
 }
 
+.wrapper i {
+  padding: 0 2px;//fixing bug causing italic text overlap
+}
+
 @media (max-width: @minLaptopWidth) {
   .questionFront {
     font-size: 26px;
