--- a/src/Frontend/src/components/course/Navigation/Unit/NavigationHeader/NavigationHeader.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NavigationHeader/NavigationHeader.less
@@ -1,10 +1,6 @@
 @import "../../../../../variables.less";
 
 .root {
-  position: sticky;
-  top: 0;
-  z-index: 3; // preventing nav links to overlap root
-  background-color: @white;
   padding: 12px 15px 15px 14px;
   border-bottom: 1px solid @borderColor;
 }
@@ -13,6 +9,13 @@
   margin-bottom: 6px;
 
   overflow: hidden;
+
+  border-bottom: 1px solid #E5E5E5;
+  position: sticky;
+  padding: 12px 15px 7px 14px;
+  top: 0;
+  z-index: 3;
+  background-color: white;
 }
 
 .h2 {
@@ -33,6 +36,10 @@
 @media (min-width: @maxLaptopWidth) {
   .root {
     padding: 19px 17px 21px 23px;
+  }
+
+  .breadcrumbs {
+    padding: 17px 17px 15px 23px;
   }
 
   .h2 {
